Portrait, and landscape working.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ flutter:
     - assets\images\wind\West.png
     - assets\images\wind\WestNorthWest.png
     - assets\images\wind\WestSouthWest.png
+    - assets/json/ordinal_directions_paths.json
+    - assets/json/weather_state.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
